feat: implement role-based authorization with USER and ADMIN roles