@@ -2,8 +2,10 @@ package com.gautam.ecommerce_backend.security;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.gautam.ecommerce_backend.entity.User;
@@ -17,7 +19,10 @@ public class CustomUserDetails implements UserDetails{
 	}
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return Collections.emptyList();
+		return List.of(
+				new SimpleGrantedAuthority("ROLE_" + user.getRole().name())
+				);
+				
 	}
 	@Override
 	public String getPassword() {
